# buildfly

./: .air.toml  .gitignore  CLAUDE.md  README.md  bfly  buildfly.yaml  go.mod  go.sum  gow  gow.ps1  manager  setup.py
.clinerules/: build_tag.md  buildfly.md  config.md  golang.md  install.md  pixi.md  project_struct.md  uv.md
buildfly/: __main__.py  args.py  common.py  env.py
buildfly/actions/: base_action.py  basic_action.py  build_action.py  config_action.py  env_action.py  get_action.py  new_action.py  pkg_action.py  repo_action.py  run_action.py
buildfly/backend/: __init__.py  base_backend.py  cmake_backend.py  makefile_backend.py  ninja_backend.py
buildfly/config/: global_config.py  pkg_config.py  repo_list.py
buildfly/generator/: base_generator.py  makefile_generator.py
buildfly/repos/: common.py  dependency_manager.py  orm.py  repo_cache_db.py
buildfly/targets/: __init__.py  cc_targets.py
buildfly/utils/: api_utils.py  color_utils.py  compress_utils.py  dep_utils.py  github_api_utils.py  http_pkg_utils.py  io_utils.py  labels_utils.py  log_utils.py  string_utils.py  system_utils.py  yaml_conf_utils.py
cmd/: main.go
cmd/cli/: commands.go  context.go  detect.go  install.go  install_test.go  root.go  venv.go
docs/: BUILD_TAG_IMPLEMENTATION.md  BUILD_TAG_SUMMARY.md  CACHE_IMPROVEMENTS.md  CHECKSUM_VERIFICATION.md  CLI_CONTEXT_REFACTORING.md  FILEUTILS_REFACTORING.md  HIERARCHY_CONFIG.md  MANAGER_USAGE.md  PIXI_BACKEND_IMPLEMENTATION.md  PROGRESS_AND_PROXY.md  PROGRESS_BAR_IMPLEMENTATION.md  PROXY_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  TEMPLATE_BUILD_SCRIPTS.md  USAGE.md  UV_CONFIG_IMPLEMENTATION.md  VENV_IMPLEMENTATION.md  syntax.md
examples/absl-demo/: CMakeLists.txt  README.md  buildfly.yaml  main.cpp
examples/backward-compatibility-demo/: buildfly.yaml
examples/basic-cmake/: buildfly.yaml
examples/pixi-demo/: CMakeLists.txt
scripts/: update-repo-short.sh
test/: buildfly.yaml
tests/: test-auto-detect.yaml  test-simple-install.yaml
(+63 files in other folders)
